# Courtvision

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-mac.yml  build-windows.yml
functions/: _middleware.ts  tsconfig.json
functions/api/: db.ts  storage.ts
src/: App.tsx  database.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json  updater_keys.pub
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: ClipsList.tsx  ExportButton.tsx  TaggingForm.tsx  Toast.tsx  VideoPlayer.tsx
src/lib/: db-web.ts  platform.ts  storage-web.ts
